examples/datalog/14_aggregations/32_sum_on_strings.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sum_strings
Knowledge graph 'test_sum_strings' created.
Switched to knowledge graph: test_sum_strings
> .kg use test_sum_strings
Switched to knowledge graph: test_sum_strings
> +data[("a",), ("b",), ("c",)].
Inserted 3 fact(s) into 'data'.
> +bad_sum(<SUM:X>) :- data(X).
Script error: Parse error: Invalid term: '<SUM:X>'
